--- a/package.json
+++ b/package.json
@@ -8,5 +8,15 @@
   },
   "keywords": [],
   "author": "Alejandro Steinmetz",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@vue/component-compiler-utils": "^2.1.2",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "vue-template-compiler": "^2.5.17"
+  },
+  "dependencies": {
+    "vue": "^2.5.17",
+    "vue-hot-reload-api": "^2.3.0"
+  }
 }
