--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "parcelTest",
   "version": "1.0.0",
-  "description": "",
+  "description": "Parcel & Vue test project.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html"
   },
   "keywords": [],
   "author": "Alejandro Steinmetz",
@@ -13,6 +13,10 @@
     "@vue/component-compiler-utils": "^2.1.2",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "eslint": "^5.3.0",
+    "eslint-plugin-vue": "^4.7.1",
+    "node-sass": "^4.9.3",
+    "parcel-plugin-eslint": "^1.0.4",
     "vue-template-compiler": "^2.5.17"
   },
   "dependencies": {
